@@ -198,6 +198,7 @@
 #gptofoo escp2-r310 printer/Epson-Stylus_Photo_R310
 #gptofoo escp2-rx400 printer/Epson-Stylus_Photo_RX400
 #gptofoo escp2-rx420 printer/Epson-Stylus_Photo_RX420
+#gptofoo escp2-rx425 printer/Epson-Stylus_Photo_RX425
 #gptofoo escp2-rx430 printer/Epson-Stylus_Photo_RX430
 #gptofoo escp2-rx500 printer/Epson-Stylus_Photo_RX500
 #gptofoo escp2-rx510 printer/Epson-Stylus_Photo_RX510
