@@ -1344,6 +1344,7 @@ EPSON Stylus Photo R300
 EPSON Stylus Photo R310
 EPSON Stylus Photo RX400
 EPSON Stylus Photo RX420
+EPSON Stylus Photo RX425
 EPSON Stylus Photo RX430
 EPSON Stylus Photo RX500
 EPSON Stylus Photo RX510
@@ -1704,6 +1705,7 @@ Epson Stylus Photo R200        escp2-r200      EPSON Stylus Photo R200
 Epson Stylus Photo R300        escp2-r300      EPSON Stylus Photo R300
 Epson Stylus Photo RX400       escp2-rx400     EPSON Stylus Photo RX400
 Epson Stylus Photo RX420       escp2-rx420     EPSON Stylus Photo RX420
+Epson Stylus Photo RX425       escp2-rx425     EPSON Stylus Photo RX425
 Epson Stylus Photo RX500       escp2-rx500     EPSON Stylus Photo RX500
 Epson Stylus Photo RX600       escp2-rx600     EPSON Stylus Photo RX600
 Epson Stylus Photo RX620       escp2-rx620     EPSON Stylus Photo RX620
